--- a/guesser.pot
+++ b/guesser.pot
@@ -5,62 +5,60 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2015-12-27 10:59-0300\n"
+"POT-Creation-Date: 2020-04-04 21:17+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=cp1252\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
-#: pregunta2.py:105
-msgid "¿Tu %s %s? (s/n)  "
+#: Guesser.py:109
+msgid "Is Your %s %s? (y/n)"
 msgstr ""
 
-#: pregunta2.py:124
-msgid "¿Tu %s es %s? (s/n) "
+#: Guesser.py:128
+msgid "Is Your %s %s? (y/n) "
 msgstr ""
 
-#: pregunta2.py:127
-msgid "Gané, jejeje"
+#: Guesser.py:131
+msgid "I Won, hahaha"
 msgstr ""
 
-#: pregunta2.py:131
-msgid "No puede ser, nooooo!"
+#: Guesser.py:135
+msgid "It can't be, nooooo"
 msgstr ""
 
-#: pregunta2.py:154
-msgid "Me rindo.¿Qué %s era?: "
+#: Guesser.py:161
+msgid "I give up. What %s was it ?:"
 msgstr ""
 
-#: pregunta2.py:156
+#: Guesser.py:163
 msgid ""
 "\n"
-"Perfecto.\n"
-"Podrías formular una pregunta de tipo 'sí o no' para diferenciar tu %s? (la respuesta debe ser sí)"
+"Perfect.\n"
+"Could you ask a 'yes or no' question to differentiate your %s? (The answer must be yes)"
 msgstr ""
 
-#: pregunta2.py:157
-msgid "Completa la siguiente oración: '¿Tu %s ...... ?'"
+#: Guesser.py:164
+msgid "Complete the following sentence: 'Your %s ......?'"
 msgstr ""
 
-#: pregunta2.py:159
-msgid "¿Tu %s..."
+#: Guesser.py:166
+msgid "Your %s..."
 msgstr ""
 
-#: pregunta2.py:163
-msgid "Esa pregunta ya me la sé, intenta con otra."
+#: Guesser.py:170
+msgid "I already know that question, try another one."
 msgstr ""
 
-#: pregunta2.py:179
-msgid ""
-"Vamos a jugar un juego, piensa en un %s, cuando quieras, aprieta enter.\n"
-" Cuando no sepa la respuesta, presione enter para saltar la pregunta"
+#: Guesser.py:186
+msgid "Let's play a game, think of a %s, whenever you want, hit enter."
 msgstr ""
 
-#: pregunta2.py:184
-msgid "Querrías jugar de nuevo?   "
+#: Guesser.py:191
+msgid "Would you like to play again?"
 msgstr ""
 
